kubernetes/02-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric8-admin
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: etone/fabric8scape-admin:latest
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: Always
        resources:
          limits:
            memory: 200m
            cpu: 500m
