kubernetes/02-admin-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric8-admin-ui
  labels:
    app: admin-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
      - name: admin
        image: etone/fabric8scape-admin-ui:r1
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
