kubernetes/02-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric8-registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: etone/fabric8scape-registry:r1
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
      serviceAccountName: registry-sa
