kubernetes/01-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-service
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
