kubernetes/01-rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
