kubernetes/02-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - protocol:  TCP
      port: 8080
