kubernetes/02-admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui-service
spec:
  type: ClusterIP
  selector:
    app: admin-ui
  ports:
    - protocol:  TCP
      port: 8080
