kubernetes/02-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - protocol:  TCP
      port: 8080
